Backspace mostly working now. Still issues with wrapped lines.

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 }
 
 #terminalWrapper{
-    background-color: #171a1d;
+    background-color: #1d1e1f;
     box-shadow: inset 0px 0px 100rem 3rem rgba(0,0,0,1);
     position:relative;
 }
